--- a/init.ranchu.rc
+++ b/init.ranchu.rc
@@ -72,9 +72,9 @@ on zygote-start
 on boot
     chown root system /sys/power/wake_lock
     chown root system /sys/power/wake_unlock
-    insmod /system/lib/modules/invcase.ko
-    chown system system /dev/invcase
-    chmod 0600 /dev/invcase
+    insmod /system/lib/modules/carsenze.ko
+    chown system system /dev/carsenze
+    chmod 0600 /dev/carsenze
 
     # Create an unused USB gadget to allow sysfs testing
     mkdir /config/usb_gadget/g1 0770 root root
